# openodia

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION_TO_UV.md  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  codecov.yml  codeql-analysis.yml  codequality.yml  github-page.yml  python-package-conda.yml  release.yml
application/: index.html
docs/: application.md  index.md
open_odia/: __init__.py  __main__.py
openodia/: __init__.py  __main__.py  _letters.py  _odianames.py  _summarization.py  _translate.py  _understandData.py  constants.py  language_detector.py  letters.py  names.py  odiatokenizer.py  stemming.py  textutils.py  tokenizer.py  understandData.py
openodia/common/: constants.py  utility.py
openodia/corpus/: __init__.py  dictionary.py
openodia/corpus/monolingual/: README.md  sample_or_sentences.json
openodia/corpus/parallel_corpus/: README.md  sample_en_or.csv
search/: search_index.json
tests/: test_constants.py  test_corpus_init.py  test_corpus_loaders.py  test_dictionary.py  test_edge_cases.py  test_init.py  test_letters.py  test_main.py  test_odianames.py  test_stemming.py  test_summarization.py  test_textutils.py  test_translate.py  test_understandData.py  test_utility.py
