[project]
name = "openodia"
version = "0.1.12"
description = "Open source Odia language tools"
authors = [
    {name = "Soumendra Kumar Sahoo", email = "proud_odia@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["python", "packaging", "pypi", "uv", "pip", "github-actions", "odia", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22.3",
    "Faker>=13.4.0",
    "deep-translator>=1.11.4",
    "rich>=12.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "ruff>=0.1.0",
    "pytest-cov>=3.0.0",
    "commitizen>=2.27.1",
    "bandit>=1.7.1",
    "pre-commit>=2.17.0",
    "mkdocs>=1.2.2",
    "mkdocs-git-revision-date-localized-plugin>=0.10.0",
    "mkdocs-material>=7.3.2",
]

[project.urls]
Repository = "https://github.com/soumendrak/openodia"
Documentation = "https://openodia.soumendrak.com"
Issues = "https://github.com/soumendrak/openodia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = [
    "openodia/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install uv && uv build"

[tool.ruff]
target-version = "py39"
line-length = 127

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "UP", # pyupgrade
    "C90", # mccabe complexity
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
